--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "expense-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend for managing shop expenses.",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -25,6 +25,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.3",
+    "mongoose-sequence": "^6.0.1",
     "winston": "^3.17.0"
   },
   "devDependencies": {
